--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /.phpunit.cache
+/public/build
+/public/hot
+/public/storage
 /storage/*.key
 /storage/pail
-.env
-.env.backup
 .env.production
 .phpactor.json
 .phpunit.result.cache
