Refactor authentication routes and implement staff login functionality

--- a/.env
+++ b/.env
@@ -21,18 +21,18 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=mario
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=mario
+# DB_USERNAME=root
+# DB_PASSWORD=
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DRIVER=file
+# SESSION_LIFETIME=120
+# SESSION_ENCRYPT=false
+# SESSION_PATH=/
+# SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -63,4 +63,25 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+
+SERVEUR="localhost:"
+PORT=8080
+
+# VITE_APP_NAME="${APP_NAME}"
+# VITE_APP_URL="${SERVEUR}"
+# VITE_API_URL="${SERVEUR}/api"
+# VITE_APP_ENV=local
+# VITE_APP_DEBUG=true
+# VITE_APP_TIMEZONE=UTC
+# VITE_APP_LOCALE=en
+# VITE_APP_FALLBACK_LOCALE=en
+# VITE_APP_FAKER_LOCALE=en_US
+# VITE_APP_MAINTENANCE_DRIVER=file
+# VITE_APP_MAINTENANCE_STORE=database
+# VITE_PHP_CLI_SERVER_WORKERS=4
+# VITE_BCRYPT_ROUNDS=12
+# VITE_LOG_CHANNEL=stack
+# VITE_LOG_STACK=single
+# VITE_LOG_DEPRECATIONS_CHANNEL=null
+# VITE_LOG_LEVEL=debug
+# VITE_DB_CONNECTION=mysql
